--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -1,21 +1,17 @@
-﻿<Window x:Name="window" x:Class="STI_ONN.MainWindow"
+﻿<Window x:Class="STI_ONN.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:STI_ONN"
         mc:Ignorable="d"
-        Title="STI ONN" Height="auto" Width="auto">
-    <Grid Background="#FFEAF2FF" HorizontalAlignment="Center" VerticalAlignment="Center" Height="1032" Width="1920">
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="374*"/>
-            <ColumnDefinition Width="1440*"/>
-            <ColumnDefinition Width="84*"/>
-            <ColumnDefinition Width="23*"/>
-        </Grid.ColumnDefinitions>
-        <Rectangle HorizontalAlignment="Left" Height="130" Margin="0,902,0,0" Stroke="#0B5793" Fill="#0B5793" VerticalAlignment="Top" Width="1920" Grid.ColumnSpan="4"/>
-        <Image x:Name="STI_ONN" Height="1166" Width="1683" Source="/STI ONN Logo transparent 3.png" Stretch="Fill" Margin="118,-184,0,0" HorizontalAlignment="Left" VerticalAlignment="Top" Grid.ColumnSpan="2"/>
-        <Button x:Name="touch" Content="Touch to Start" HorizontalAlignment="Left" Margin="339,862,0,0" VerticalAlignment="Top" Height="120" Width="494" FontSize="60" FontFamily="Tw Cen MT" FontWeight="Bold" Foreground="White" BorderBrush="{x:Null}" Grid.Column="1" Background="#FFD4D4D4" Opacity="0.85">
+        Title="STI ONN" Height="auto" Width="auto"
+        WindowState="Maximized"
+        WindowStyle="None">
+    <Grid Background="#FFEAF2FF" HorizontalAlignment="Center" VerticalAlignment="Center" Height="1080" Width="1920">
+        <Rectangle HorizontalAlignment="Center" Height="130" Margin="0,952,0,0" Stroke="#0B5793" Fill="#0B5793" VerticalAlignment="Top" Width="1920"/>
+        <Image x:Name="STI_ONN" Height="1041" Width="1504" Source="assets/STI ONN Logo transparent 3.png" Stretch="Fill" HorizontalAlignment="Center" VerticalAlignment="Top" Margin="0,-24,0,0"/>
+        <Button x:Name="touch" Content="Touch to Start" HorizontalAlignment="Center" Margin="0,883,0,0" VerticalAlignment="Top" Height="120" Width="494" FontSize="60" FontFamily="Tw Cen MT" FontWeight="Bold" Foreground="White" BorderBrush="{x:Null}" Background="#FFD4D4D4" Opacity="0.85" Click="touch_Click_1">
             <Button.Resources>
                 <Style TargetType="{x:Type Border}">
                     <Setter Property="CornerRadius" Value="50"/>
