--- a/Home.xaml
+++ b/Home.xaml
@@ -59,5 +59,6 @@
                 </TransformGroup>
             </Button.RenderTransform>
         </Button>
+        <Label Content="Be Future-Ready. Be STI." HorizontalAlignment="Center" Margin="0,545,0,0" VerticalAlignment="Top" Height="92" Width="716" FontSize="72" FontFamily="Tw Cen MT" Foreground="#FF676767"/>
     </Grid>
 </Window>
