--- a/Floor2.xaml
+++ b/Floor2.xaml
@@ -1,16 +1,16 @@
-﻿<Window x:Class="STI_ONN.Building"
+﻿<Window x:Class="STI_ONN.Floor2"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:STI_ONN"
         mc:Ignorable="d"
-        Title="Building" 
+        Title="Floor2" 
         Height="auto" 
         Width="auto"
         WindowState="Maximized"
         WindowStyle="None">
-    
+
     <Viewbox StretchDirection="Both">
         <Grid HorizontalAlignment="Center" VerticalAlignment="Center" Height="1080" Width="1920">
             <Grid Margin="492,0,0,947">
@@ -22,10 +22,10 @@
                 <!-- menubar -->
                 <TextBlock Text="Floors" Margin="152,381,152,644" FontWeight="Bold" FontSize="40"/>
                 <Line
-                    X1="0" Y1="10"
-                    X2="400" Y2="10"
-                    Stroke="Black"
-                    StrokeThickness="1" Margin="20,367,10,675" RenderTransformOrigin="0.5,0.5" >
+                X1="0" Y1="10"
+                X2="400" Y2="10"
+                Stroke="Black"
+                StrokeThickness="1" Margin="20,367,10,675" RenderTransformOrigin="0.5,0.5" >
                     <Line.RenderTransform>
                         <TransformGroup>
                             <ScaleTransform/>
@@ -79,7 +79,7 @@
                         </MenuItem.Icon>
                     </MenuItem>
 
-                    <MenuItem Margin="-1,237,1,-299" FontSize="40" FontWeight="Bold">
+                    <MenuItem Margin="-1,237,1,-299" FontSize="40" FontWeight="Bold" Click="ground_btn">
                         <MenuItem.Header>
                             <Grid>
                                 <TextBlock Text="Ground" Margin="85,0,-86,0"/>
@@ -93,7 +93,7 @@
                         </MenuItem.Icon>
                     </MenuItem>
 
-                    <MenuItem Margin="0,317,0,-379" FontSize="40" FontWeight="Bold" Click="mezzanine_btn">
+                    <MenuItem Margin="0,317,0,-379" FontSize="40" FontWeight="Bold">
                         <MenuItem.Header>
                             <Grid>
                                 <TextBlock Text="Mezzanine" Margin="85,0,-86,0"/>
@@ -107,7 +107,7 @@
                         </MenuItem.Icon>
                     </MenuItem>
 
-                    <MenuItem Margin="1,398,-1,-460" FontSize="40" FontWeight="Bold" Click="floor2_btn">
+                    <MenuItem Margin="1,398,-1,-460" FontSize="40" FontWeight="Bold">
                         <MenuItem.Header>
                             <Grid>
                                 <TextBlock Text="2nd Floor" Margin="85,0,-86,0"/>
@@ -172,12 +172,12 @@
 
                 <ScrollViewer HorizontalScrollBarVisibility="Auto" VerticalScrollBarVisibility="Auto" Margin="10,154,0,0">
                     <Canvas Name="canvas" Background="White" Height="900" VerticalAlignment="Bottom">
-                        <Image Height="844" Source="/assets/Maps/Ground3d.png" Width="1469" Canvas.Top="25"
-                               Name="image"
-                               MouseWheel="Image_MouseWheel"
-                               MouseLeftButtonDown="Image_MouseLeftButtonDown"
-                               MouseLeftButtonUp="Image_MouseLeftButtonUp"
-                               MouseMove="Image_MouseMove" Canvas.Left="-94" RenderTransformOrigin="0.5,0.5">
+                        <Image Height="844" Source="/assets/Maps/2ndFloor.png" Width="1469" Canvas.Top="25"
+                           Name="image"
+                           MouseWheel="Image_MouseWheel"
+                           MouseLeftButtonDown="Image_MouseLeftButtonDown"
+                           MouseLeftButtonUp="Image_MouseLeftButtonUp"
+                           MouseMove="Image_MouseMove" Canvas.Left="-94" RenderTransformOrigin="0.5,0.5">
                             <Image.RenderTransform>
                                 <TransformGroup>
                                     <ScaleTransform/>
@@ -188,7 +188,7 @@
                             </Image.RenderTransform>
                         </Image>
                         <Rectangle Name="clickableSection" Fill="#FFD63F3F"
-                        MouseDown="ClickableSection_Click" Canvas.Left="436" Canvas.Top="321" HorizontalAlignment="Left" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5" Height="119" Width="142">
+                    MouseDown="ClickableSection_Click" Canvas.Left="462" Canvas.Top="320" HorizontalAlignment="Left" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5" Height="85" Width="119">
                             <Rectangle.RenderTransform>
                                 <TransformGroup>
                                     <ScaleTransform ScaleX="0.997"/>
